<resources>
    <string name="app_name">InteractBible</string>
    <string name="interact_bible">Interactive Bible</string>
    <string name="sign_in">Sign in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="back_button">Back</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUp</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_reading">ScrollingActivity</string>
    <string name="facebook_app_id">1039772626823577</string>
    <string name="fb_login_protocol_scheme">fb1039772626823577</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_apple">Sign up with Apple</string>
    <string name="title_activity_reference">Reference</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="search">Search</string>
    <string name="exodus">Exodus</string>
    <string name="genesis">Genesis</string>
    <string name="leviticus">Leviticus</string>
    <string name="numbers">Numbers</string>
    <string name="deuteronomy">Deuteronomy</string>
    <string name="joshua">Joshua</string>
    <string name="judges">Judges</string>
    <string name="ruth">Ruth</string>
    <string name="_1_samuel">1 Samuel</string>
    <string name="_2_samuel">2 Samuel</string>
    <string name="_1_kings">1 Kings</string>
    <string name="_2_kings">2 Kings</string>
    <string name="_1_chronicles">1 Chronicles</string>
    <string name="ezra">Ezra</string>
    <string name="nehemiah">Nehemiah</string>
    <string name="esther">Esther</string>
    <string name="job">Job</string>
    <string name="psalms">Psalms</string>
    <string name="proverbs">Proverbs</string>
    <string name="ecclesiastes">Ecclesiastes</string>
    <string name="ezekiel">Ezekiel</string>
    <string name="lamentations">Lamentations</string>
    <string name="malachi">Malachi</string>
    <string name="zechariah">Zechariah</string>
    <string name="haggai">Haggai</string>
    <string name="zephaniah">Zephaniah</string>
    <string name="habbakkuk">Habbakkuk</string>
    <string name="nahum">Nahum</string>
    <string name="micah">Micah</string>
    <string name="jonah">Jonah</string>
    <string name="obadiah">Obadiah</string>
    <string name="amos">Amos</string>
    <string name="joel">Joel</string>
    <string name="hosea">Hosea</string>
    <string name="daniel">Daniel</string>
    <string name="jeremiah">Jeremiah</string>
    <string name="isaiah">Isaiah</string>
    <string name="song_of_songs">Song of Songs</string>
    <string name="_2_chronicles">2 Chronicles</string>
    <string name="revelation">Revelation</string>
    <string name="jude">Jude</string>
    <string name="_3_john">3 John</string>
    <string name="_2_john">2 John</string>
    <string name="_1_john">1 John</string>
    <string name="_2_peter">2 Peter</string>
    <string name="_1_peter">1 Peter</string>
    <string name="hebrews">Hebrews</string>
    <string name="philemon">Philemon</string>
    <string name="titus">Titus</string>
    <string name="_2_timothy">2 Timothy</string>
    <string name="_1_timothy">1 Timothy</string>
    <string name="_2_thessalonians">2 Thessalonians</string>
    <string name="_1_thessalonians">1 Thessalonians</string>
    <string name="colossians">Colossians</string>
    <string name="ephesians">Ephesians</string>
    <string name="galatians">Galatians</string>
    <string name="_2_corinthians">2 Corinthians</string>
    <string name="_1_corinthians">1 Corinthians</string>
    <string name="romans">Romans</string>
    <string name="acts">Acts</string>
    <string name="john">John</string>
    <string name="luke">Luke</string>
    <string name="mark">Mark</string>
    <string name="matthew">Matthew</string>
    <string name="james">James</string>
    <string name="philippians">Philippians</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verse">VERSE</string>
    <string name="book_file_key" />
    <string name="title_activity_recycler_page_layout">recycler_page_layout</string>
    <string name="kjv">KJV</string>
    <string name="menu_logo">menu_logo</string>
    <string name="title_activity_map">MapActivity</string>
    <!--    <string name="default_web_client_id"></string>-->


</resources>