<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context="com.example.interactivebible.ui.login.SignInActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/sign_in"
        android:textColor="#243443"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        app:backgroundTint="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <EditText
        android:id="@+id/username"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:fontFamily="@font/ptsans_regular"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/signIn" />


    <EditText
        android:id="@+id/password"
        android:layout_width="357dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/rounded_edittext"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:fontFamily="@font/ptsans_regular"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="24sp"
        app:backgroundTint="#000000"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/forgot_pwd" />

    <TextView
        android:id="@+id/forgot_pwd"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/ptsans_regular"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:text="@string/forgot_password"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#243443"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintLeft_toLeftOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp" />


    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="130dp"
        android:background="@color/white"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/apple_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/google_button"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/ic_facebook_logo" />

    <ImageButton
        android:id="@+id/apple_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="130dp"
        android:background="@color/white"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/ic_apple_logo" />

    <ImageButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="130dp"
        android:background="@color/white"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/facebook_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:srcCompat="@drawable/ic_google" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>
